@@ -84,13 +84,17 @@ hal_device_get_rapi_connection(HalClient *self, WmDevice *device)
 
   rapi_conn = rapi_connection_from_name(name);
   g_free(name);
+  if (!rapi_conn) {
+    g_critical("%s: Failed to obtain rapi connection to %s", G_STRFUNC, name);
+    goto error_exit;;
+  }
 
   rapi_connection_select(rapi_conn);
   CeRapiInit();
 
   hr = CeRapiInit();
   if (FAILED(hr)) {
-    g_critical("%s: Rapi connection to %s failed: %d: %s", G_STRFUNC, name, hr, synce_strerror(hr));
+    g_critical("%s: Failed to initialise rapi connection to %s: %d: %s", G_STRFUNC, name, hr, synce_strerror(hr));
     goto error_exit;;
   }
 
